--- a/src/Components/Footer/footer.css
+++ b/src/Components/Footer/footer.css
@@ -32,21 +32,28 @@
 
 .input-with-button {
   position: relative;
+  padding-top: 1.3rem;
+  padding-right: 1.5rem;
+
 }
 
 .input-with-button input[type="text"] {
-  padding: 8px 40px 8px 8px; /* Adjust padding to accommodate button */
+  padding: 8px 40px 8px 8px;
+  /* Adjust padding to accommodate button */
   margin-right: 10px;
   border: 1px solid #ccc;
+  outline: none;
   border-radius: 4px;
   width: 100%;
-  box-sizing: border-box; /* Ensure padding and border are included in width */
+  flex: 1;
+  box-sizing: border-box;
+  /* Ensure padding and border are included in width */
 }
 
 .input-with-button button {
   position: absolute;
   top: 50%;
-  right: 8px;
+  right: 1px;
   transform: translateY(-50%);
   padding: 8px;
   background-color: #007bff;
@@ -54,6 +61,7 @@
   border: none;
   border-radius: 0 4px 4px 0;
   cursor: pointer;
+  outline: none;
 }
 
 .input-with-button button:hover {
@@ -70,7 +78,7 @@
     flex-direction: column;
     align-items: center;
   }
-  
+
   .footer-section {
     margin-bottom: 20px;
     text-align: center;
